CD4J-34 Update readme files with info about extra JVM arguments